<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xavbot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adamlwatts@msn.com">Adam Watts</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>xavbot_behavior</depend>
  <depend>xavbot_controller</depend>
  <depend>xavbot_description</depend>
  <depend>xavbot_hardware</depend>
  <depend>xavbot_interfaces</depend>
  <depend>xavbot_moveit_config</depend>
  <depend>xavbot_perception</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
